src/simplex/revised_simplex/snapshots/tsuno__simplex__revised_simplex__phase_one__tests__simplex_solve_normalizes_negative_right_hand_side.snap
---
source: src/simplex/revised_simplex/phase_one.rs
expression: trace
---
phase: phase one
iteration 0
basis before: [2, 3]
outcome: pivoted
entering column: 0 (reduced_cost: -1)
leaving column: 2 (step_length: 1)
direction: [1, 0]
basis after: [0, 3]

phase: phase one
iteration 1
basis before: [0, 3]
outcome: pivoted
entering column: 1 (reduced_cost: -1)
leaving column: 3 (step_length: 0)
direction: [-1, 1]
basis after: [0, 1]

phase: phase one
iteration 2
basis before: [0, 1]
outcome: optimal
basis after: [0, 1]

phase: phase two
iteration 0
basis before: [0, 1]
outcome: optimal
basis after: [0, 1]
