src/simplex/revised_simplex/snapshots/tsuno__simplex__revised_simplex__phase_one__tests__simplex_solve_records_phase_one_iteration_limit_trace.snap
---
source: src/simplex/revised_simplex/phase_one.rs
expression: trace
---
phase: phase one
iteration 0
basis before: [3, 4]
outcome: pivoted
entering column: 0 (reduced_cost: -2)
leaving column: 4 (step_length: 0.25)
direction: [1, 1]
basis after: [3, 0]
